5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1582_1332.log
== TEST (2019-03-13 22:21:30) 
-- CODE:
aresta = a
area = A
print(A=3/2(3a)**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(A=3/2(3a)**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:30:24) 
-- CODE:
aresta = a
area = A
print(A=3/2(3a)**2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(A=3/2(3a)**2)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:44:43) 
-- CODE:
aresta = a
area = A
print(A=3/2*(3a)**1.5**2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(A=3/2*(3a)**1.5**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:45:05) 
-- CODE:
aresta = a
area = A
print(A=3/2*(3a)**1.5**2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(A=3/2*(3a)**1.5**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 22:49:24) 
-- CODE:
aresta = 
area = 
print(3/2*(3)**1.5**2)
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:01:26) 
-- CODE:
aresta = 5
area = (3/2*(3*5)**1.5**2)
print("area")
print(round(area, 4))
-- OUTPUT:
area
664.1965
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:04:23) 
-- CODE:
aresta = 5
area = (3/2*(3*5)**1.5**2)
print("area")
print(round(area, 4))
-- OUTPUT:
area
664.1965
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:09:44) 
-- CODE:
aresta = 5
area = (3/2*(3*5)**1.5**2)
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.195827
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
664.1965
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:10:20) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5)
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:12:30) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5)
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.1549
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:12:31) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2)**0.5)
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.151209
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:15:57) 
-- CODE:
aresta = 5
area = (3/2*(3*(5**2))**0.5)
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:16:37) 
-- CODE:
aresta = 5
area = (3/2*(3*(5**2))**0.5)
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:23:11) 
-- CODE:
aresta = 5
area = (3/2*(3*(5**2))**0.5)
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.14442
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:25:29) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:29:15) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:35:54) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:45:10) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 10:46:25) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- OUTPUT:
area
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 10:50:39) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**0.5))
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.134999
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 17:14:13) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**1/2))
print("area")
print(round(area, 4))
-- OUTPUT:
area
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 17:15:04) 
-- CODE:
aresta = 5
area = (3/2*((3*(5**2))**1/2))
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.153414
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 14:50:13) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2**(1/2)))
print("area")
print(round(area, 4))
-- OUTPUT:
area
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:56:56) 
-- CODE:
aresta = 5
area = (3/2(3*5**2**(1/2))
print("area")
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print("area")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:57:10) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2**(1/2))
print("area")
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print("area")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 15:57:24) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2**(1/2)))
print("area")
print(round(area, 4))
-- OUTPUT:
area
43.8233
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 15:57:26) 
-- CODE:
aresta = 5
area = (3/2*(3*5**2**(1/2)))
print("area")
print(round(area, 4))
-- EXECUTION TIME:
0.139699
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
area
43.8233
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 09:20:05) 
-- CODE:
aresta = 5
area = 3*3*(1/2)*5**2/2

print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 09:22:58) 
-- CODE:
aresta = 5
area = 3*3*(1/2)*5**2/2

print(round(area, 4))
-- EXECUTION TIME:
0.233371
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 09:23:42) 
-- CODE:
aresta = 5
area = 3*3**(1/2)*5**2/2

print(round(area, 4))
-- EXECUTION TIME:
0.143882
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
